# glm

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  glm.h  main.c
Documentation/: index.html
Documentation/files/ext/: vector_double3-h-Summary.js  vector_double3-h-SummaryToolTips.js  vector_double3-h.html  vector_float3-h-Summary.js  vector_float3-h-SummaryToolTips.js  vector_float3-h.html  vector_float4-h-Summary.js  vector_float4-h-SummaryToolTips.js  vector_float4-h.html
Documentation/menu/: files.js  tabs.js
Documentation/other/: home.html
Documentation/search/: index.js
Documentation/search/keywords/: 0067006c006d.js
glm/: glm.h  mat2x2.h  mat2x3.h  mat2x4.h  mat3.h  mat3x2.h  mat3x3.h  mat3x4.h  mat4x2.h  mat4x3.h  mat4x4.h  swizzle.h  vec1.h  vec2.h  vec3.h  vec4.h
glm/detail/: _swizzle.h  func_float32_trigonometric.c  func_matrix.inl  func_vector_bool.inl  func_vector_common.inl  func_vector_exponential.inl  func_vector_geometric.inl  func_vector_rational.inl  func_vector_relational.c  func_vector_relational.inl  func_vector_trigonometric.inl  func_vector_vec3.inl  math.h  namespace_begin.c  namespace_begin.inl  namespace_end.c  namespace_end.inl  namespace_template_matrix_begin.inl  namespace_template_matrix_end.inl  namespace_template_vector_begin.inl  namespace_template_vector_end.inl  qualifier.h  qualifier.h_  scalar_float32.c  scalar_float64.c  setup.h  type_float.h  type_float32.c  type_float64.c  type_half.h  type_mat2x2.h  type_mat2x3.h  type_mat2x4.h  type_mat3x2.h  type_mat3x3.h  type_mat3x4.h  type_mat4x2.h  type_mat4x3.h  type_mat4x4.h  type_matrix.h  (+21 more)
glm/ext/: matrix_double2x2.c  matrix_double2x2.h  matrix_double2x3.c  matrix_double2x3.h  matrix_double2x4.c  matrix_double2x4.h  matrix_double3x2.c  matrix_double3x2.h  matrix_double3x3.c  matrix_double3x3.h  matrix_double3x4.c  matrix_double3x4.h  matrix_double4x2.c  matrix_double4x2.h  matrix_double4x3.c  matrix_double4x3.h  matrix_double4x4.c  matrix_double4x4.h  matrix_float2x2.c  matrix_float2x2.h  matrix_float2x3.c  matrix_float2x3.h  matrix_float2x4.c  matrix_float2x4.h  matrix_float3x2.c  matrix_float3x2.h  matrix_float3x3.c  matrix_float3x3.h  matrix_float3x3.inl  matrix_float3x4.c  matrix_float3x4.h  matrix_float4x2.c  matrix_float4x2.h  matrix_float4x3.c  matrix_float4x3.h  matrix_float4x4.c  matrix_float4x4.h  type_bool1.c  type_bool1.h  type_bool2.c  (+65 more)
glm/gtx/: print.h
glm/simd/: platform.h
test/: .swp  a.out  demo_bool.c  demo_constructors.c  demo_print.c  demo_teapot.c  demo_transforms.c  experiment_constructor.c  hadd_vec4_test.c  hadd_vec4_test.txt  hello_particles_gl1.c  main.c  main.s  matrix_transform_test.c  particle.h  teapot.c  test.h
